# crystal

./: .gitignore
calculator/: CMakeLists.txt
calculator/include/: matrix.hpp
calculator/test/: CMakeLists.txt  test_matrix.cpp
codesnips/: CMakeLists.txt  blocking_queue.hpp  blocking_unordered_map.hpp  host_ip.hpp  join_to_string.hpp  main.cpp
interesting/chinese_code/: chinese_code.cpp
interesting/shuiyangyu/: shuiyangyu.py
shell/sed/: extract.sh
spider/douban_movie_top_250/: douban_movie_top_250.py  douban_movie_top_250.txt
spider/hearthstone_cards/: hearthstone.json  hearthstone_cards.py
uniqueid/: CMakeLists.txt
uniqueid/config/: uniqueid.json
uniqueid/gen-cpp/: Uniqueid.cpp  Uniqueid.h  Uniqueid_server.skeleton.cpp  uniqueid_constants.cpp  uniqueid_constants.h  uniqueid_types.cpp  uniqueid_types.h
uniqueid/include/: common.h  context.h  uniqueid_worker.h
uniqueid/protocol/: uniqueid.thrift
uniqueid/source/: common.cpp  context.cpp  uniqueid_client.cpp  uniqueid_server.cpp  uniqueid_worker.cpp
uniqueid/tools/: parse_serials_file.py  uniqueid_client.py
useful/: kaoqinmingxi.py
