CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(CALCULATOR)

SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(CMAKE_CXX_FLAGS "-g -std=c++11")

SET(CALCULATOR_SERVER src/main.cpp)

INCLUDE_DIRECTORIES(
    "include"
    "/usr/local/include"
)

LINK_DIRECTORIES(
    "/usr/local/lib"
)

ADD_EXECUTABLE(calculator_server ${CALCULATOR_SERVER})

ADD_CUSTOM_COMMAND(
    TARGET calculator_server
    POST_BUILD
    COMMAND echo ${CALCULATOR_SOURCE_DIR}
)

